--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 <% end %>
 
-<%= render 'shared/page_title', title: "Not One Step Back" %>
+<%= render 'shared/page_title', title: "Order#227 - Not One Step Back" %>
 
 <%= will_paginate %>
 <% if @posts.total_pages > 1 %>
