--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,18 +1,21 @@
+<div class="container-fluid">
   <div class="row text-center">
     <div class="col-10 offset-1">
       <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>">
+      <div class="alert alert-<%= message_type %> alert-privs">
         <%= message %>
         <a class="close" data-dismiss="alert">&#215;</a>
       </div>
       <% end %>
     </div>
   </div>
-  
+
+</div>
+
 <script type="text/javascript">
 $(document).on('turbolinks:load', function(){
-    $(".alert").delay(2500).slideUp(500, function(){
-          $(".alert").alert('close');
+    $(".alert-privs").delay(2500).slideUp(500, function(){
+          $(".alert-privs").alert('close');
       });
     });
 </script>
