--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -6,20 +6,19 @@
     <% end %>
     <div class="row">
       <% @pictures.each do |picture| %>
-        <div class="col-6 col-md-4 col-lg-3 text-center">
-          <%= link_to image_tag(picture.picture.middle.url, {class: "img-fluid img-thumbnail"}), "#picture-view-modal", :class => "btn", "data-toggle" => "modal", "data-picture" => picture.picture.large.url, "data-title" => picture.alt_text  %>
+        <div class="col-6 col-md-4 col-lg-3 text-center align-self-center mb-3">
+          <%= link_to image_tag(picture.picture.large.url, {class: "img-fluid img-thumbnail"}), "#picture-view-modal", :class => "btn", "data-toggle" => "modal", "data-picture" => picture.picture.large.url, "data-title" => picture.alt_text  %>
         </div>
       <% end %>
     </div>
     
-  
   <% will_paginate @pictures %>
 </div>
 
 
 <div class="modal hide fade" id="picture-view-modal" title="View Picture">
-  <div class=".modal-dialog-centered modal-dialog">
-    <div class="modal-body a-unique-class">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-body">
       <img class="img-fluid modal-img">
     </div>
   </div>
@@ -37,5 +36,5 @@ $('#picture-view-modal').on('show.bs.modal', function (event) {
   modal.find('.modal-img').attr('src', pic)
   modal.find('.modal-img').attr('alt', title);
   
-})
+});
 </script>
