fixed contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,23 +1,23 @@
 <div class="container-fluid main-background">
 	<div class="row highlight-background align-items-center">
-				<div class="col-xs-12 col-lg-6 text-center p-4">
+				<div class="col-xs-12 col-xl-6 text-center mt-4">
 					<p><%= mail_to "order227band@gmail.com", "EMAIL US", class: "main-text main-text-link" %></p>
 				</div>
-				<div class="col-xs-12 col-lg-6 text-center p-4">
+				<div class="col-xs-12 col-xl-6 text-center mt-4">
 					<%= link_to image_tag("bandcamp/bandcamp-logotype-light-128.png", {class: "img-fluid", alt: "Order#227 at Bandcamp"}), "https://order227band.bandcamp.com", target: "_blank" %>
 				</div>
-				<div class="col-xs-12 col-lg-6 text-center p-4">
+				<div class="col-xs-12 col-xl-6 text-center mt-4">
 				  <%= link_to image_tag("FB-FindUsonFacebook-online-512.png", {class: "img", height: "60px", alt: "Order#227 on Facebook"}), "https://www.facebook.com/Order227Band/", target: "_blank" %>
 				</div>
-				<div class="col-xs-12 col-lg-6 text-center p-4">
+				<div class="col-xs-12 col-xl-6 text-center mt-4 mb-2 pt-3">
           <%= link_to("https://twitter.com/order227band", {class: "main-text main-text-link", target: "_blank"}) do %>
             FOLLOW US ON TWITTER <%= image_tag("tw_link_g.png", {class: "img", height: "70px", alt: "Order#227 on Twitter"}) %>
           <% end %>
 				</div>
-				<div class="col-xs-12 col-lg-6 text-center p-4">
+				<div class="col-xs-12 col-xl-6 text-center mt-5 pt-2">
 					<p><%= link_to "FIND US AT RIVETGUN RECORDS", "http://www.rivetgunrecords.co.uk/order227/index.htm", {class: "main-text main-text-link", target: "_blank"} %></p>				
 				</div>
-				<div class="col-xs-12 col-lg-6 text-center p-4">
+				<div class="col-xs-12 col-xl-6 text-center mt-5 p-4">
 					<%= link_to("https://www.youtube.com/channel/UCO35S3PlOE1zmyndPTfsROw?sub_confirmation=1", {class: "main-text main-text-link", target: "_blank"}) do %>
             SUBSCRIBE ON YOUTUBE <%= image_tag("yt_icon_mono_dark.png", {class: "img", height: "40px", alt: "Order#227 on YouTube"}) %>
           <% end %>
