--- a/app/views/shows/show.html.erb
+++ b/app/views/shows/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/page_title', title: "Show: " + display_venue(@show.venue) + " on " + format_date(@show.date) %>
 <div class="row mb-3">
-  <div class="col-11 offset-1">
+  <div class="col-10 offset-1">
     <section class="main-text">
       <p><strong>Venue: </strong><%= link_to display_venue(@show.venue), edit_venue_path(@show.venue), class: "main-text main-text-link" %></p>
       <p><strong>Date: </strong><%= format_date(@show.date) %></p>
@@ -19,11 +19,14 @@
 
 <div class="row">
   <% if logged_in? and current_user.admin? %>
-    <div class="col-6 text-center my-3">
+    <div class="col-4 text-center my-3">
       <%= link_to "Back to shows", shows_path, class: "main-text main-text-link" %>
     </div>
-    <div class="col-6 text-center my-3">
-      <%= link_to "DELETE THIS SHOW", @show, method: :delete, class: "main-text main-text-link", data: { confirm: "Are you sure you want to delete the show on: " +  format_date(@show.date) + "?" } %>
+    <div class="col-4 text-center my-3">
+      <%= link_to "EDIT SHOW", edit_show_path(@show), class: "main-text main-text-link" %>
+    </div>
+    <div class="col-4 text-center my-3">
+      <%= link_to "DELETE SHOW", @show, method: :delete, class: "main-text main-text-link", data: { confirm: "Are you sure you want to delete the show on: " +  format_date(@show.date) + "?" } %>
     </div>
   <% else %>
     <div class="col-12 text-center my-3">
