--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -2,12 +2,12 @@
 
 @font-face {
     font-family: '1952_rheinmetallregular';
-    src: url('1952_rheinmetall-webfont.eot');
-    src: url('1952_rheinmetall-webfont.eot?#iefix') format('embedded-opentype'),
-         url('1952_rheinmetall-webfont.woff2') format('woff2'),
-         url('1952_rheinmetall-webfont.woff') format('woff'),
-         url('1952_rheinmetall-webfont.ttf') format('truetype'),
-         url('1952_rheinmetall-webfont.svg#1952_rheinmetallregular') format('svg');
+    src: asset-url('1952_rheinmetall-webfont.eot');
+    src: asset-url('1952_rheinmetall-webfont.eot?#iefix') format('embedded-opentype'),
+         asset-url('1952_rheinmetall-webfont.woff2') format('woff2'),
+         asset-url('1952_rheinmetall-webfont.woff') format('woff'),
+         asset-url('1952_rheinmetall-webfont.ttf') format('truetype'),
+         asset-url('1952_rheinmetall-webfont.svg#1952_rheinmetallregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
