--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -15,6 +15,12 @@
       <%= f.url_field :url, class: "form-control" %>
     </div>
     <div class="col-sm-5 form-group">
+      <%= f.label :embed_url, "Bandcamp Embed Link" %>
+    </div>
+    <div class="col-sm-7 form-group">
+      <%= f.url_field :embed_url, class: "form-control" %>
+    </div>
+    <div class="col-sm-5 form-group">
       <%= f.label :comments %>
     </div>
     <div class="col-sm-7 form-group">
