ordering of tracks within release

--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -18,7 +18,7 @@
 </div>
 
 
-<% @release.tracks.each do |track| %>
+<% @tracks.each do |track| %>
   <div class="row">
     <div class="col main-text">
       <% if track.embed_url? %>
