--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,10 +1,10 @@
-<%= render 'shared/page_title', title: "Subscribe to the Order#227 Mailing List" %>
+<%= render 'shared/page_title', title: "Request Password Reset" %>
 <div class="row">
   <div class="col text-center">
     <%= link_to "Already signed up? Click here to log in", login_path, class: "main-text main-text-link" %>
   </div>
   <div class="col-12 text-center">
-    <%= link_to "Forgot Password? Click here to reset", new_password_reset_path, class: "main-text main-text-link" %>
+    <%= link_to "No account? Register here to subscribe to the mailing list", register_path, class: "main-text main-text-link" %>
   </div>
 </div>
 <hr/>
