--- a/app/views/user_mailer/welcome_message.html.erb
+++ b/app/views/user_mailer/welcome_message.html.erb
@@ -15,9 +15,9 @@
       Thanks, and see you at the gigs.<br>Order#227: Not One Step Back!
     </p>
     <small><p>You may unsubscribe at any time by following these instructions:</p>
-<p>Log in to your account at <%= login_path %><br>
-Click 'Edit subscription' at the bottom right of the page.<br>
-Click 'Unsubscribe'.<br>
-This will delete all your data. If you wish to rejoin the mailing list, simply sign up again as a new subscriber: <%= register_path %></small></p>
+    <p>Log in to your account at <%= login_path %><br>
+      Click 'Edit subscription' at the bottom right of the page.<br>
+      Click 'Unsubscribe'.<br>
+      This will delete all your data. If you wish to rejoin the mailing list, simply sign up again as a new subscriber: <%= register_path %></p></small>
   </body>
 </html>
