fixed undeclared variable in welcome message

--- a/app/views/user_mailer/welcome_message.text.erb
+++ b/app/views/user_mailer/welcome_message.text.erb
@@ -13,7 +13,6 @@ Order#227: Not One Step Back!
 
 ----------------------------------------------------------------
 You may unsubscribe at any time by following these instructions:
-Log in to your account at <%= login_path %>
-Click 'Edit subscription' at the bottom right of the page.
+Log in to your account, click 'Edit subscription' at the bottom right of the page.
 Click 'Unsubscribe'.
-This will delete all your data. If you wish to rejoin the mailing list, simply sign up again as a new subscriber: <%= register_path %>
+This will delete all your data. If you wish to rejoin the mailing list, simply sign up again as a new subscriber.
