--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-bottom navbar-dark navbar-default">	
 	<span class="footer-text">
-		&copy; 2018 Order#227. All Rights Reserved. Website by <a class="footer-text-link" href="mailto:contact@hootingbananastudios.com">Isaac Westwood</a>.
+		&copy; 2018 Order#227. All Rights Reserved. Website by <%= mail_to "contact@hootingbananastudios.com", "Isaac Westwood", class: "footer-text-link" %>. <%= link_to "Privacy policy", privacy_path, class: "footer-text-link" %>
 	</span>
 	
 	<div class="float-right footer-text">
