--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,7 @@
     
     <div class="col-12 mt-3">
       <section class="main-text main-text-header align-self-center text-center">
-        <%= o.title %>
+        <%= link_to o.title, post_path(o), {class: "main-text-link"} %>
       </section>
     </div>
     
