--- a/app/views/password_resets/_form.html.erb
+++ b/app/views/password_resets/_form.html.erb
@@ -7,7 +7,7 @@
       <%= text_field_tag :email, params[:email], {class:"form-control"} %>
     </div>
   </div>
-  <div class="actions text-center"><%= submit_tag "Reset Password", {class: "btn btn-default"} %></div>
+  <div class="actions text-center"><%= submit_tag "Reset Password", {class: "btn btn-default form-button"} %></div>
 <% end %>
 
 <hr/>
