--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -29,7 +29,7 @@
     
 
     <div class="col-6 text-center mt-4 form-group">
-      <%= f.submit(@picture.new_record? ? 'Upload new picture' : 'Edit picture', class: "btn btn-default") %>
+      <%= f.submit(@picture.new_record? ? 'Upload new picture' : 'Edit picture', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
       <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
