--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -39,7 +39,7 @@
       <%= f.select :release_type_id, options_for_select(ReleaseType.all.order(:name).map{ |s| [s.name, s.id]}, @release.release_type_id), {include_blank: "Select Release Type"}, {class: "form-control"} %>
     </div>    
     <div class="col-6 text-center mt-4 form-group">
-      <%= f.submit(@release.new_record? ? 'Create new Release' : 'Edit Release', class: "btn btn-default") %>
+      <%= f.submit(@release.new_record? ? 'Create new Release' : 'Edit Release', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
       <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
