--- a/app/views/shows/_form.html.erb
+++ b/app/views/shows/_form.html.erb
@@ -51,7 +51,7 @@
 
   
     <div class="col-6 text-center mt-4 form-group">
-      <%= f.submit(@show.new_record? ? 'Create new Show' : 'Edit Show', class: "btn btn-default") %>
+      <%= f.submit(@show.new_record? ? 'Create new Show' : 'Edit Show', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
       <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
