--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -45,7 +45,7 @@
       <%= f.select :release_id, options_for_select(Release.all.order(:title).map{ |s| [s.title, s.id]}, @track.release_id), {include_blank: "Select Release"}, { class: "form-control" } %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <%= f.submit(@track.new_record? ? 'Create new Track' : 'Edit Track', class: "btn btn-default") %>
+      <%= f.submit(@track.new_record? ? 'Create new Track' : 'Edit Track', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
       <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
