--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,7 +28,7 @@
       <%= f.password_field :password_confirmation, class: "form-control" %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <%= f.submit(@user.new_record? ? 'Subscribe to mailing list' : 'Edit Profile', class: "btn btn-default") %>
+      <%= f.submit(@user.new_record? ? 'Subscribe to mailing list' : 'Edit Profile', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
       <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
