form-button styling

--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -42,7 +42,7 @@
       <%= f.submit(@release.new_record? ? 'Create new Release' : 'Edit Release', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
+      <button class="btn btn-default form-button"><%= link_to "Cancel", :back, class: "form-button" %></button>
     </div>
   </div>
 <% end %>
