--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -32,7 +32,7 @@
       <%= f.submit(@picture.new_record? ? 'Upload new picture' : 'Edit picture', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
+      <button class="btn btn-default form-button"><%= link_to "Cancel", :back, class: "form-button" %></button>
     </div>
 
   </div>
