--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -61,7 +61,7 @@
       <%= f.submit(@post.new_record? ? 'Create new Post' : 'Edit Post', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
+      <button class="btn btn-default form-button"><%= link_to "Cancel", :back, class: "form-button" %></button>
     </div>
   </div>
 <% end %>
