--- a/app/views/release_types/_form.html.erb
+++ b/app/views/release_types/_form.html.erb
@@ -9,10 +9,10 @@
       <%= f.text_field :name, class: "form-control" %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <%= f.submit(@release_type.new_record? ? 'Create new Release Type' : 'Edit Release Type', class: "btn btn-default") %>
+      <%= f.submit(@release_type.new_record? ? 'Create new Release Type' : 'Edit Release Type', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
+      <button class="btn btn-default form-button"><%= link_to "Cancel", :back, class: "form-button" %></button>
     </div>
 
   </div>
