--- a/app/views/tracks/_form.html.erb
+++ b/app/views/tracks/_form.html.erb
@@ -48,7 +48,7 @@
       <%= f.submit(@track.new_record? ? 'Create new Track' : 'Edit Track', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
+      <button class="btn btn-default form-button"><%= link_to "Cancel", :back, class: "form-button" %></button>
     </div>
 
   </div>
