--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,7 +31,7 @@
       <%= f.submit(@user.new_record? ? 'Subscribe to mailing list' : 'Edit Profile', class: "btn btn-default form-button") %>
     </div>
     <div class="col-6 text-center mt-4 form-group">
-      <button class="btn btn-default"><%= link_to "Cancel", :back, class: "form-button" %></button>
+      <button class="btn btn-default form-button"><%= link_to "Cancel", :back, class: "form-button" %></button>
     </div>
   </div>
   
